2021-03-16  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-repo-mode): New minor mode for editing
	files in an ebuild repository.
	(ebuild-repo-mode-before-save): New function.
	(ebuild-repo-mode-maybe-enable, find-file-hook):
	Enable ebuild-repo-mode when the file is in an ebuild repository.
	(ebuild-mode): Enable ebuild-repo-mode instead of setting up
	write-contents-hooks ourselves.
	(ebuild-mode-before-save): Function removed.

2021-03-05  Ulrich Müller  <ulm@gentoo.org>

	* keyword-generation.sh: The eclass directory can now be specified
	with the ECLASSDIR variable. Better error checking and reporting.
	* Makefile (keywords): New target.

	* devbook-mode.el: Add "wp" and "XML" to package keywords.
	* gentoo-newsitem-mode.el: Change package keywords to "wp".
	* glep-mode.el: Ditto.

2020-07-21  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.51 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2020-04-26  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-arch-list): Update default list of
	architectures.
	(ebuild-mode-arch-stable-list): Try to read arches.desc first.

2020-03-07  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.50 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2020-02-10  Ulrich Müller  <ulm@gentoo.org>

	* devbook-mode.el (devbook-mode): Make nxml-child-indent local
	in the current buffer.

2020-02-08  Ulrich Müller  <ulm@gentoo.org>

	* devbook-mode.el: New file. Major mode for editing the
	Gentoo Devmanual, derived mode of nxml-mode.
	* ebuild-mode.texi (devbook-mode): Document it.
	* Makefile (DISTFILES): Add devbook-mode.el.

2019-12-21  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.49 released.

	* ebuild-mode-keywords.el
	(ebuild-mode-keywords-eclass-deprecated): Add elisp-need-emacs.
	(ebuild-mode-keywords-*): Regenerated.

2019-12-11  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.48 released.
